--- a/public/css/policycloud-marketplace-public.css
+++ b/public/css/policycloud-marketplace-public.css
@@ -554,8 +554,6 @@
 
 #policycloud-marketplace-assets-grid > ul > li {
   /* Display & Box Model */
-  flex-basis: 300px;
-  flex-grow: 0;
   margin: 10px;
   padding: 0;
   border-radius: 12px;
@@ -672,10 +670,14 @@
 @media screen and (max-width: 650px) {
   #policycloud-marketplace-assets-grid > ul {
     padding: 0;
+    width: 100%;
+    display: block;
   }
+
   #policycloud-marketplace-assets-grid > ul > li {
     flex: 1 0 100%;
     margin: 10px 0;
+    display: block;
   }
 }
 
@@ -864,7 +866,7 @@
 }
 
 #policycloud-marketplace-asset-archive > .content > .gallery {
-  padding: 10px;
+  margin: 15px;
 }
 
 @media screen and (max-width: 820px) {
@@ -898,11 +900,6 @@
 }
 
 @media screen and (max-width: 650px) {
-  #policycloud-marketplace-asset-archive > .content > .gallery {
-    width: 90%;
-    margin: 0 auto;
-  }
-
   #policycloud-marketplace-asset-archive > .content > header {
     display: block;
   }
