--- a/public/css/policycloud-marketplace-public.css
+++ b/public/css/policycloud-marketplace-public.css
@@ -60,6 +60,12 @@
   color: var(--policycloud-background-failure-outline) !important;
 }
 
+.policycloud-marketplace button.action.productive {
+  background-color: var(--policycloud-background-success) !important;
+  border-color: var(--policycloud-background-success-outline);
+  color: var(--policycloud-background-success-outline) !important;
+}
+
 .policycloud-marketplace button.action:hover {
   cursor: pointer;
   transform: scale(0.98);
@@ -231,7 +237,7 @@
 
 .policycloud-marketplace
   form
-  *:not(input[type="radio"], input[type="checkbox"], button, svg, table, tbody, tr, td, span, h1, h2, h3, h4, h5, h6, p, img) {
+  *:not(input[type="radio"], input[type="checkbox"], input[type="file"], button, svg, table, tbody, tr, td, span, h1, h2, h3, h4, h5, h6, p, img) {
   display: block;
   margin: 0 auto 10px auto;
   width: 100%;
@@ -1011,6 +1017,17 @@
 }
 
 @media screen and (max-width: 800px) {
+  #policycloud-marketplace-asset > header > .title {
+    flex-direction: column-reverse;
+    justify-content: flex-start;
+    align-items: flex-end;
+  }
+
+  #policycloud-marketplace-asset > header > .title > button {
+    flex: 0;
+    margin: 20px 0 0 0;
+  }
+
   #policycloud-marketplace-asset > .content {
     /* Display & Box Model */
     flex-direction: column-reverse;
@@ -1173,12 +1190,16 @@
 }
 
 #policycloud-marketplace-asset .editing-form .close {
-  z-index: 550;
+  z-index: 600;
   position: absolute;
-  top: 0;
+  top: 20px;
   right: 20px;
   color: white !important;
   width: 40px;
+  height: 40px;
+  text-align: center;
+  vertical-align: middle;
+  padding: 0;
 }
 
 #policycloud-marketplace-asset .editing-form form {
@@ -1222,6 +1243,8 @@
 
 #policycloud-marketplace-asset .editing-form .file {
   display: flex;
+  width: 100;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   font-size: 14px;
@@ -1229,6 +1252,10 @@
   border-radius: 12px;
   padding: 7.5px 15px;
   margin: 10px 0;
+}
+
+#policycloud-marketplace-asset .editing-form .file:last-of-type {
+  margin-bottom: 20px;
 }
 
 #policycloud-marketplace-asset .editing-form .file > * {
@@ -1261,6 +1288,21 @@
   border: none;
   transform: scale(0.9);
   transition: all 0.2s ease-in-out;
+}
+
+@media screen and (max-width: 650px) {
+  #policycloud-marketplace-asset .editing-form form {
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+  }
+  #policycloud-marketplace-asset .editing-form form > fieldset {
+    padding: 10px;
+  }
+
+  #policycloud-marketplace-asset .editing-form .close {
+    color: black !important;
+  }
 }
 
 /*
